<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/flightNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/flight_number"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_NewFlight" />

    <EditText
        android:id="@+id/departureEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/departure"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightNumber" />

    <EditText
        android:id="@+id/arrivalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arrival"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureEditText" />

    <EditText
        android:id="@+id/departureTimeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/departure_time"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalEditText" />

    <EditText
        android:id="@+id/flightCapacityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flight_capacity"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureTimeEditText" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightCapacityEditText" />

    <Button
        android:id="@+id/addFlightButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_flight"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceEditText" />

    <TextView
        android:id="@+id/tw_NewFlight"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:text="Flight details"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>